main.css
body {
  margin-top: 200px;
  margin-left: 200px;
  margin-right: 500px;
  font-family: 'MERegular', sans-serif;
}

p {
  margin-top: 0px;
  margin-bottom: 0px;
}

a {
  text-decoration: none;
  color:red;
}

a:hover{
  color:gray;
}

.header {
  font-size: 18px;
  font-family: 'MEBold', sans-serif;
  letter-spacing: 1px;
  line-height: 20px;
}

.sub-header{
  text-transform: none;
  font-size: 14px;
  font-family: 'MERegular', sans-serif;
}

.nav {
  font-family: 'MEBoldItalic', sans-serif;
  line-height: 29px;
  font-size: 18px;
  margin-bottom: 77px;
  letter-spacing: 1px;
}

.content-container {
  font-size: 16px;
  margin-bottom: 77px;
}

.content-section {
  font-family: 'MEBold', sans-serif;
  font-style: italic;
  letter-spacing: 3px;
  color: lightgrey;
  margin-bottom: -50px;
}

.content-header{
  font-family: 'MEBold', sans-serif;
  font-size: 18px;
  letter-spacing: 1px;
}

.content-subheader{
  font-size: 14px;
}

.about-profile{
  padding-bottom: 100px;
}

@font-face {
    font-family: MonoBold;
    src: url('Fonts/ModernEraMonoTRIAL-Bold.otf');
}

@font-face {
    font-family: MonoExtraBold;
    src: url('Fonts/ModernEraMonoTRIAL-ExtraBold.otf');
}

@font-face {
    font-family: MonoMedium;
    src: url('Fonts/ModernEraMonoTRIAL-Medium.otf');
}

@font-face {
    font-family: MonoRegular;
    src: url('Fonts/ModernEraMonoTRIAL-Regular.otf');
}

@font-face {
    font-family: MERegular;
    src: url('Fonts/ModernEraTRIAL-Regular.otf');
}

@font-face {
    font-family: MEItalic;
    src: url('Fonts/ModernEraTRIAL-Italic.otf');
}

@font-face {
    font-family: MEBlack;
    src: url('Fonts/ModernEraTRIAL-Black.otf');
}

@font-face {
    font-family: MEBoldItalic;
    src: url('Fonts/ModernEraTRIAL-BoldItalic.otf');
}

@font-face {
    font-family: MEBold;
    src: url('Fonts/ModernEraTRIAL-Bold.otf');
}

@font-face {
    font-family: VeraMono;
    src: url('Fonts/VeraMono.ttf');
}

@font-face {
    font-family: VeraMonoBoldItalic;
    src: url('Fonts/VeraMono-Bold-Italic.ttf');
}

@font-face {
    font-family: VeraMonoBold;
    src: url('Fonts/VeraMono-Bold.ttf');
}

@media only screen and (max-width: 1200px) {
    body {
        margin-left: 100px;
        margin-right: 300px;
    }
}

@media only screen and (max-width: 800px) {
    body {
        margin-left: 50px;
        margin-right: 50px;
    }
}

